<resources>
    <string name="app_name">Just Java</string>
    <string name="quantity">QUANTITY</string>
    <string name="number">0</string>
    <string name="button">Order</string>
    <string name="textview">Quantity</string>
    <string name="minus">-</string>
    <string name="_0">0</string>
    <string name="plus">+</string>
    <string name="price">Price</string>
    <string name="order">Order</string>
    <string name="zero">$0</string>
    <string name="reset">Reset</string>

</resources>
