<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.example.android.justjava.MainActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical">

        <TextView
            android:id="@+id/textView4"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="14dp"
            android:paddingRight="14dp"
            android:paddingTop="16dp"
            android:text="@string/textview"
            android:textAllCaps="true"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="16dp" />


        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content">

            <Button
                android:id="@+id/minus"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginLeft="16dp"
                android:onClick="decrement"
                android:text="@string/minus" />


            <TextView
                android:id="@+id/quantity_text_view"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingLeft="6dp"
                android:text="@string/_0"
                android:textColor="@android:color/black"
                android:textSize="16sp"
                tools:layout_editor_absoluteX="40dp"
                tools:layout_editor_absoluteY="104dp" />

            <Button
                android:id="@+id/plus"
                android:layout_width="48dp"
                android:layout_height="wrap_content"
                android:layout_marginBottom="16dp"
                android:layout_marginLeft="8dp"
                android:onClick="increment"
                android:text="@string/plus" />
        </LinearLayout>


        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="8dp"
            android:paddingLeft="16dp"
            android:text="@string/price"
            android:textAllCaps="true"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="16dp" />

        <TextView
            android:id="@+id/price_text_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="16dp"
            android:paddingLeft="14dp"
            android:text="@string/zero"
            android:textColor="@android:color/black"
            android:textSize="16sp"
            tools:layout_editor_absoluteX="40dp"
            tools:layout_editor_absoluteY="104dp" />


        <Button
            android:id="@+id/button2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginBottom="8dp"
            android:layout_marginLeft="8dp"
            android:onClick="submitOrder"
            android:text="@string/order" />

        <Button
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginLeft="8dp"
            android:onClick="reset"
            android:text="@string/reset"
            android:textAllCaps="true" />


    </LinearLayout>

</android.support.constraint.ConstraintLayout>
